# sparkie_perception

./: Dockerfile
sparkie_lidar/: package.xml  setup.cfg  setup.py
sparkie_lidar/launch/: lidar.launch.py
sparkie_lidar/params/: sllidar.yaml
sparkie_nav/: package.xml  setup.cfg  setup.py
sparkie_nav/launch/: loc.launch.py  nav.launch.py
sparkie_nav/params/: nav2.yaml
sparkie_odom/: package.xml  setup.cfg  setup.py
sparkie_odom/launch/: odom.launch.py
sparkie_odom/params/: ekf.yaml  imu.yaml
sparkie_perception/: package.xml  setup.cfg  setup.py
sparkie_perception/launch/: perception.launch.py
sparkie_perception/resource/: sparkie_perception
sparkie_slam/: package.xml  setup.cfg  setup.py
sparkie_slam/config/: cartographer_2d.lua  localization.lua  mapping.lua
sparkie_slam/launch/: cart.launch.py  slam.launch.py
sparkie_slam/params/: slam.yaml
